[package]
    edition = "2024"
    name = "os-traits"
    version = "0.1.0"

[features]
    std = ["critical-section/std"]
    std-custom-mutex = ["std", "mutex/std"]

[dependencies]
    cfg-if = "1"
    critical-section = "1"
    embedded-hal = "1"
    fugit = "0.3"
    mutex = "1"
    mutex-traits = "1"
