[package]
    authors = ["Jalon Wong <jalonwong@gmail.com>"]
    description = "Traits used to adapter different embedded RTOS."
    documentation = "https://docs.rs/os-trait"
    edition = "2024"
    keywords = ["embedded", "no-std", "RTOS"]
    license = "MIT OR Apache-2.0"
    name = "os-trait"
    readme = "README.md"
    repository = "https://github.com/mcu-rust/os-trait"
    version = "0.7.0"


    [package.metadata.docs.rs]
        features = ["std"]

[features]
    alloc = []
    default = ["alloc"]
    std = ["timeout-trait/std"]
    std-custom-mutex = ["std", "mutex/std"]

[dependencies]
    cfg-if = "1"
    mutex = "1"
    mutex-traits = "1"
    timeout-trait = "0.5"
    # timeout-trait = { path = "../timeout-trait" }
